removing entry specific classes : "that's a bold move cotton"